Add footer to index

--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
     </figcaption>
   </figure>
 
+  <footer role="contentinfo">
+    <p>© Thomas J Bradley</p>
+    <a href="mailto:hey@thomasjbradley.ca">hey@thomasjbradley.ca</a>
+    <address>
+      Ottawa, Ontario
+      <br>Canada
+    </address>
+  </footer>
+
   <script type="application/ld+json">
     {
       "@context": "https://schema.org",
@@ -30,8 +39,6 @@
       "keywords": "Web, Responsive, CSS, Mobile, Dinosaurs"
     }
   </script>
-  © Thomas J Bradley
-  hey@thomasjbradley.ca
-  Ottawa, Ontario, Canada
+
 </body>
 </html>
