Link the author

--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
       "@context": "https://schema.org",
       "@type": "WebSite",
       "name": "Dinos 'R' Us",
+      "author": {
+        "@type": "Person",
+        "@id": "#thomasjbradley"
+      }
       "description": "A shop-at-home website dedicated to the many amazing dinosaur products",
       "image": "https://placehold.it/1600x900",
       "award": "Won the RGD Student Award 2015",
