--- a/index.html
+++ b/index.html
@@ -35,12 +35,23 @@
       "author": {
         "@type": "Person",
         "@id": "#thomasjbradley"
-      }
+      },
       "description": "A shop-at-home website dedicated to the many amazing dinosaur products",
       "image": "https://placehold.it/1600x900",
       "award": "Won the RGD Student Award 2015",
       "url": "https://thomasjbradley.ca/work/dinos-r-us/",
       "keywords": "Web, Responsive, CSS, Mobile, Dinosaurs"
+    }
+  </script>
+
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "@id": "#thomasjbradley",
+      "name": "Thomas J Bradley",
+      "email": "hey@thomasjbradley.ca",
+      "url": "https://thomasjbradley.ca"
     }
   </script>
 
